# localLLM

./: .coverage  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  compose.yml  pyproject.toml
.github/workflows/: main.yaml
data/: enriched_albums.json
data/inputs/: enriched_albums.json  livres-audio.json
models/: llama3.modelfile
src/localllm/: __init__.py  albums.json  config.py  factory.py
src/localllm/application/: __init__.py  application.py
src/localllm/application/services/: service.py
src/localllm/application/use_cases/: enrich_albums.py  index_albums.py  interfaces.py  load_albums.py  store_albums.py
src/localllm/domain/: multimedia.py
src/localllm/domain/ports/: enrichers.py  feedback.py  fetchers.py  persistence.py
src/localllm/infra/api/cli/: __init__.py
src/localllm/infra/inputs/: fetchers.py
src/localllm/infra/outputs/: enrichers.py  fetchers.py
src/localllm/infra/spi/persistence/file/: fetchers.py  repository.py
src/localllm/infra/spi/persistence/repository/: databases.py  models.py  vectors.py
src/localllm/infra/spi/ui/: cli.py
src/localllm/infra/spi/web/: adapters.py  enrichers.py
tests/: conftest.py  test_adapters.py  test_multimedia_service.py  test_qdrant_persistence.py  test_sqlite_persistence.py
