[tool.poetry]
name = "localllm"
version = "0.1.0"
description = "A simple RAG application with ollama and langchain"
authors = ["David Drugeon-Hamon"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
